# NMRcraft

./: .gitignore  .p10k.zsh  .pre-commit-config.yaml  .zshrc  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  style.mplstyle
.github/workflows/: tests.yml
metrics/: results_baselines.csv  results_multi_target.csv  results_one_target.csv
metrics/old/: results_baselines.csv  results_multi_target.csv  results_one_target.csv
metrics_100_200_500evals/: results_multi_target.csv  results_one_target.csv
nmrcraft/: app.py  main.ipynb  main.py
nmrcraft/analysis/: __init__.py  plotting.py
nmrcraft/data/: __init__.py  data_utils.py  dataloader.py  dataset.py
nmrcraft/evaluation/: __init__.py  evaluation.py  visualizer.py
nmrcraft/models/: __init__.py  classifier.py  hyperparameter_tune.py  model_configs.py  models.py
nmrcraft/training/: __init__.py  epoch_fns.py  hyperparameter_tune.py  losses.py
nmrcraft/utils/: __init__.py  general.py  seed.py  set_seed.py
scripts/: reproduce_results.py
scripts/analysis/: accuracy_table.py  dataset_statistics.py  pca_ligand_space.py  visualize_results.py  visulize_results.py
scripts/training/: baselines.py  final_results.py  multi_targets.py  multi_targets.sh  multiple_targets.py  multiple_targets.sh  multiple_tragets.py  one_target.py  one_target.sh  test.py  test_hyperopt_metal  test_hyperopt_metal.py  train_metal.py  train_simple_RF.py  train_simple_RFC.py  train_simple_RFR.py
svelte-app/: README.md  package-lock.json  package.json  rollup.config.js
svelte-app/scripts/: setupTypeScript.js
tests/: data.csv  file.txt  test_dataloader.py  test_foo.py  test_models.py
tutorials/: how_to_dataloader.ipynb
zscratch/: messi.py  train_messi.py
