[tool.poetry]
name = "nmrcraft"
version = "0.0.1"
description = "NMR Chemical Reactivity Analysis with Feature Tracking"
authors = ["Karolina Biniek, Magdalena Lederbauer, Samuel Stricker, Tiago Würthner <fmlederbauer@ethz.ch>"]
repository = "https://github.com/mlederbauer/nmrcraft"
documentation = "https://mlederbauer.github.io/nmrcraft/"
readme = "README.md"
packages = [
  {include = "nmrcraft"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
rdkit = "^2023.9.5"
hydra-core = "^1.3.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
torch = "^2.2.1"
scikit-learn = "^1.4.1.post1"
cycler = "^0.12.1"
pre-commit = "^3.5.0"
pytest = "^8.1.1"
datasets = "^2.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["nmrcraft"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
